--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,31 +1,12 @@
-body 
-{
+body {
 	margin:0;
 	padding:0;
 	background:#ffffff;
 }
-p,td 
-{ 
+p,td { 
 	font-family:Arial, Helvetica, sans-serif;
 	margin-top: 0px;
 }
-
-.Estilo1
-{
-	font-size: 35px;
-}
-
-.Estilo10
-{
-	font-size: 20px;
-}
-
-.Estilo12
-{
-	font-size: 19px;
-}
-
-
 .body_txt {
 	color: #000000;
 	text-align: justify;
@@ -98,19 +79,17 @@ p,td
 **************        @Menu         ****************
 ****************************************************/
 #navigator {
-	float:left;
-	margin-left:420px;
-	margin-bottom:10px;
+width: 600px; margin: 0 auto;
 }
 /***************************************************
 **************        @Titulo       ****************
 ****************************************************/
 .titulo{
 		font-family:Arial, Helvetica, sans-serif;
-		font-size: 30px;
+		font-size: 24px;
 		color: #13a;
 		text-align: center;
-		margin-top:50px;
+		margin-top:60px;
 }
 /*********************************************************
 **************     @Contenido Central     ****************
@@ -210,8 +189,8 @@ select{
 ****************************************************/
 .imprimir { 
 	width:60px;
-	height:40px;
-	background-image:url('../images/Adobe.png');
+	height:60px;
+	background-image:url('../images/icono-pdf.png');
 }
 
 /***************************************************
@@ -249,4 +228,47 @@ select{
 	padding-top: 3px;
 	padding-bottom: 8px;
 	text-align: center;
+}
+
+/***************************************************
+**************    Botones Azules    ****************
+****************************************************/
+.button-blue{
+	-moz-box-shadow:inset 0px 0px 15px 3px #9fb4f2;
+	-webkit-box-shadow:inset 0px 0px 15px 3px #9fb4f2;
+	box-shadow:inset 0px 0px 15px 3px #9fb4f2;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
+	background:-moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7892c2', endColorstr='#476e9e',GradientType=0);
+	background-color:#7892c2;
+	-moz-border-radius:17px;
+	-webkit-border-radius:17px;
+	border-radius:17px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:13px;
+	padding:3px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+.button-blue:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
+	background:-moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
+	background-color:#476e9e;
+}
+.button-blue:active {
+	position:relative;
+	top:1px;
 }
